--- a/index.html
+++ b/index.html
@@ -717,49 +717,84 @@
                 Jurusan RPL resmi menjalin kerja sama dengan PT NETVIRO melalui MoU. Kerja sama ini bertujuan meningkatkan pengalaman industri bagi siswa dan memperkuat kompetensi mereka di bidang teknologi.
               </p>
               <h3 class="text-2xl text-blue-400 font-semibold mb-2" data-aos="fade-up">Kompetensi/Materi yang diajarkan</h3>
+
+
+              <div class="hidden sm:flex flex-wrap gap-1  text-xs md:text-sm lg:text-md xl:text-lg">
+                <p>
+                  Sistem Komputer, &nbsp;
+                </p>
+                <p>
+                  Dasar Desain Grafis, &nbsp;
+                </p>
+                <p>
+                  Simulasi dan Komunikasi Digital, &nbsp;
+                </p>
+                <p>
+                  Komputer dan Jaringan Dasar, &nbsp;
+                </p>
+                <p>
+                  Pemrograman Dasar, &nbsp;
+                </p>
+                <p>
+                  Pemodelan Perangkat Lunak, &nbsp;
+                </p>
+                <p>
+                  Basis Data, &nbsp;
+                </p>
+                <p>
+                  Pemrograman Berorientasi Obyek, &nbsp;
+                </p>
+                <p>
+                  Pemrograman Web dan Perangkat Bergerak, &nbsp;
+                </p>
+                <p>
+                  Produk Kreatif dan Kewirausahaan, &nbsp;
+                </p>
+
+              </div>
               <div class="flex flex-col sm:flex-row  sm:hidden  gap-2  ">
 
                 <div class="flex flex-row gap-2 ">
                   <div class=" text-xs xl:text-lg w-1/2 ">
-                    Sistem Komputer, 
+                   <p> Sistem Komputer, </p> 
                   </div>
                   <div class=" text-xs xl:text-lg w-1/2 ">
-                    Dasar Desain Grafis, 
+                   <p> Dasar Desain Grafis, </p> 
                  </div>  
                </div>
                 
                 <div class="flex flex-row gap-2 ">
                   <div class=" text-xs xl:text-lg w-1/2 ">
-                    Simulasi dan Komunikasi Digital, 
+                   <p> Simulasi dan Komunikasi Digital, </p> 
                   </div>
                   <div class=" text-xs xl:text-lg w-1/2 ">
-                    Komputer dan Jaringan Dasar, 
+                   <p> Komputer dan Jaringan Dasar, </p> 
                   </div>
                 </div>
                 <div class="flex flex-row gap-2 ">
-                  <div class=" text-xs xl:text-lg w-1/2 sm:w-full ">
-                    Pemrograman Dasar, 
+                  <div class=" text-xs xl:text-lg w-1/2 ">
+                   <p> Pemrograman Dasar, </p> 
                   </div>
-                  <div class=" text-xs xl:text-lg w-1/2 sm:w-full ">
-                    Pemodelan Perangkat Lunak, 
+                  <div class=" text-xs xl:text-lg w-1/2 ">
+                   <p> Pemodelan Perangkat Lunak, </p> 
                  </div>  
                </div>
                 
                 <div class="flex flex-row gap-2 ">
-                  <div class=" text-xs xl:text-md w-1/2 sm:w-full ">
-                    Basis Data, 
+                  <div class=" text-xs xl:text-md w-1/2 ">
+                   <p> Basis Data, </p> 
                   </div>
-                  <div class=" text-xs xl:text-md w-1/2 sm:w-full ">
-                    Pemrograman Berorientasi Obyek, 
+                  <div class=" text-xs xl:text-md w-1/2 ">
+                   <p> Pemrograman Berorientasi Obyek, </p>
                   </div>
                 </div>
 
                 <div class="flex flex-row gap-2 ">
-                  <div class=" text-xs xl:text-md w-1/2 sm:w-full ">
-                    Pemrograman Web dan Perangkat Bergerak, 
+                  <div class=" text-xs xl:text-md w-1/2 ">
+                   <p> Pemrograman Web dan Perangkat Bergerak, </p> 
                   </div>
-                  <div class=" text-xs xl:text-md w-1/2 sm:w-full ">
-                    Produk Kreatif dan Kewirausahaan, 
+                  <div class=" text-xs xl:text-md w-1/2 ">
+                   <p> Produk Kreatif dan Kewirausahaan, </p> 
                   </div>
                 </div>
 
@@ -770,6 +805,7 @@
       </div>
     </div>
   </section>
+  
 <script src="./public/js/aos.js"></script>
 <script src="./public/js/tw-ele.js"></script>
 <script src="./public/js/main.js"></script>
