--- a/index.html
+++ b/index.html
@@ -45,20 +45,21 @@
 
 
 
-
     <script type="application/ld+json">
       {
-        "@context": "https:/schema.org",
+        "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "PPLG Website",
         "description": "Website Mengenai PPLG SMK Negeri 2 Pekanbaru.",
-        "url": "https:/pplg2.pages.dev",
+        "url": "https://zavents.ovh/rpl",
         "author": {
           "@type": "Person",
           "name": "Zavents"
-        }
+        },
+        "inLanguage": "id"
       }
       </script>
+      
       
 
 
