--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <nav id="navbar" class="fixed z-50 flex items-center justify-between w-screen py-4 mx-auto transition-all duration-500 flex-nowrap shadow-dark-mild lg:flex-wrap lg:justify-start backdrop-blur-0" data-twe-navbar-ref>
     <div class="flex flex-wrap items-center justify-between w-full px-8 mx-auto md:px-16">
         <div class="">
-            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="#"><img class="transition-transform duration-300 ease-in rounded-10 hover:scale-125" src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt=""></a>
+            <a class="text-xl text-white transition-transform duration-300 ease-in rounded-10 hover:scale-125" href="#"><img class="transition-transform duration-300 ease-in rounded-10 hover:scale-125" src="./public/images/icon/pplg-white-icon.svg" style="width: 100px;" alt="Logo PPLG"></a>
         </div>
     <button
         class="relative z-50 block px-2 text-white bg-transparent border-0 hover:no-underline hover:shadow-none focus:no-underline focus:shadow-none focus:outline-none focus:ring-0 lg:hidden"
@@ -269,7 +269,7 @@
     <div class="relative container mx-auto px-4 !min-h-screen   pb-20">
       <div class="relative flex flex-col items-center justify-center min-h-screen -m-6 xl:flex-row lg:pt-32 pb-36 ">
         <div class="self-start w-full p-6 pt-10 xl:w-auto" data-aos="fade-right" data-aos-delay="100">
-          <img loading="lazy" decoding="async" class="mx-auto transition-transform duration-300 hover:scale-125 " loading="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
+          <img loading="lazy" decoding="async" class="mx-auto transition-transform duration-300 hover:scale-125 " loading="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="Gambar Wildan Header">
           <p class="mt-4 text-lg font-bold text-center text-white">Wildan Fathan</p>
         </div>
         <div class="flex-1 p-6"  data-aos="fade-in" data-aos-delay="700">
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="self-end w-full p-6 xl:w-auto" data-aos="fade-left" data-aos-delay="300">
-          <img loading="lazy" decoding="async" class="mx-auto transition-transform duration-300 hover:scale-125" loading="lazy" decoding="async" src="./public/images/rahsya-header.svg" alt="">
+          <img loading="lazy" decoding="async" class="mx-auto transition-transform duration-300 hover:scale-125" loading="lazy" decoding="async" src="./public/images/rahsya-header.svg" alt="Gambar Rahsya Header ">
           <p class="mt-4 text-lg font-bold text-center text-white">Rahsya Benova Akbar</p>
         </div>
       </div>
@@ -746,45 +746,45 @@
               <div class="flex flex-col gap-2 sm:flex-row sm:hidden ">
 
                 <div class="flex flex-row gap-2 ">
-                  <div class="w-1/2 text-xs  xl:text-lg">
+                  <div class="w-1/2 text-xs xl:text-lg">
                    <p> Sistem Komputer, </p> 
                   </div>
-                  <div class="w-1/2 text-xs  xl:text-lg">
+                  <div class="w-1/2 text-xs xl:text-lg">
                    <p> Dasar Desain Grafis, </p> 
                  </div>  
                </div>
                 
                 <div class="flex flex-row gap-2 ">
-                  <div class="w-1/2 text-xs  xl:text-lg">
+                  <div class="w-1/2 text-xs xl:text-lg">
                    <p> Simulasi dan Komunikasi Digital, </p> 
                   </div>
-                  <div class="w-1/2 text-xs  xl:text-lg">
+                  <div class="w-1/2 text-xs xl:text-lg">
                    <p> Komputer dan Jaringan Dasar, </p> 
                   </div>
                 </div>
                 <div class="flex flex-row gap-2 ">
-                  <div class="w-1/2 text-xs  xl:text-lg">
+                  <div class="w-1/2 text-xs xl:text-lg">
                    <p> Pemrograman Dasar, </p> 
                   </div>
-                  <div class="w-1/2 text-xs  xl:text-lg">
+                  <div class="w-1/2 text-xs xl:text-lg">
                    <p> Pemodelan Perangkat Lunak, </p> 
                  </div>  
                </div>
                 
                 <div class="flex flex-row gap-2 ">
-                  <div class="w-1/2 text-xs  xl:text-md">
+                  <div class="w-1/2 text-xs xl:text-md">
                    <p> Basis Data, </p> 
                   </div>
-                  <div class="w-1/2 text-xs  xl:text-md">
+                  <div class="w-1/2 text-xs xl:text-md">
                    <p> Pemrograman Berorientasi Obyek, </p>
                   </div>
                 </div>
 
                 <div class="flex flex-row gap-2 ">
-                  <div class="w-1/2 text-xs  xl:text-md">
+                  <div class="w-1/2 text-xs xl:text-md">
                    <p> Pemrograman Web dan Perangkat Bergerak, </p> 
                   </div>
-                  <div class="w-1/2 text-xs  xl:text-md">
+                  <div class="w-1/2 text-xs xl:text-md">
                    <p> Produk Kreatif dan Kewirausahaan, </p> 
                   </div>
                 </div>
@@ -796,6 +796,52 @@
     </div>
   </section>
 
+  <swiper-container class="relative z-40 mySwiper" loop="true" slides-per-view="2"
+  space-between="30" centered-slides="true">
+    <swiper-slide class ="!-mr-2 lg:!mr-[30px]">
+      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
+      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+    </swiper-slide>
+    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
+      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+    </swiper-slide>
+    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+    </swiper-slide>
+    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+    </swiper-slide>
+    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet</p>
+      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+    </swiper-slide>
+    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+    </swiper-slide>
+  </swiper-container>
+  
   <footer class="w-full p-4 pt-10 pb-10">
     <div class="absolute top-0 left-0 z-50 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44 "></div>
     <div class="absolute bottom-0 left-0 z-50 w-full bg-gradient-to-t from-black via-transparent to-transparent h-44 "></div>
@@ -805,7 +851,7 @@
 
     <div class="max-w-3xl mx-auto">
     <a href="https://github.com/zavents" target="_blank" class="flex justify-center ">
-      <img loading="lazy" src="./public/images/icon/pplg-white-full-icon.svg" loading="lazy" width="250px" alt="">
+      <img loading="lazy" src="./public/images/icon/pplg-white-full-icon.svg" loading="lazy" width="250px" alt="Logo PPLG FULL">
     </a>
     <ul class="flex flex-col items-center justify-center py-10 mb-10 text-lg transition-all duration-500 border-b border-gray-200 gap-7 md:flex-row md:gap-12">
       <li>
@@ -908,7 +954,7 @@
   </script>
 
   <script src="./public/js/bundle.min.js"></script>
-
+  <script src="./public/js/swiperebudnel.js"></script>
 </body>
 </html>
 
