--- a/kelas10.html
+++ b/kelas10.html
@@ -156,32 +156,91 @@
 </div>
 </nav>
 
-<section class="relative">
-    <div class="absolute bottom-0 left-0 z-30 w-full h-full bg-gradient-to-b from-transparent to-black"></div>
+<style>
+    /* Default style for arrows (desktop and tablet) */
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 50;
+    }
+  
+    .arrow-left {
+      left: 10px;
+    }
+  
+    .arrow-right {
+      right: 10px;
+    }
+  
+    /* Adjust position for mobile L (425px) */
+    @media (max-width: 639px) {
+      .arrow {
+        margin-top: 10px;
+        top: 110%; /* Position above the "Pembelajaran" section */
+        transform: translateY(0); /* Reset vertical alignment */
+      }
+      .arrow-left {
+        left: 70px;
+      }
+    
+      .arrow-right {
+        right: 70px;
+      }
+    }
 
-    <div class="absolute inset-0 " style="background-color:rgba(0, 0, 0, 0.534)"></div>
+  </style>
+  
+<section class="relative">
+    <!-- Gradient Overlay -->
+    <div class="absolute bottom-0 left-0 z-30 w-full h-full bg-gradient-to-b from-transparent to-black"></div>
+    
+    <!-- Transparent Overlay -->
+    <div class="absolute inset-0" style="background-color:rgba(0, 0, 0, 0.534)"></div>
+
+    <!-- Content Section -->
     <div class="absolute left-0 z-40 flex flex-col justify-center w-full h-full gap-3 p-4 py-32 mt-10 sm:max-w-xl lg:max-w-3xl xs:gap-5 sm:px-32 sm:mt-0 md:-mt-20 xs:py-20">
-        <h1 class="text-xl font-bold leading-tight text-white font-inter xs:text-3xl lg:text-5xl xl:text-6xl">PENGEMBANGAN PERANGKAT <BR> LUNAK DAN GIM</h1>
-        <p class="text-sm text-white font-inter lg:text-lg leading-thight">Kelas 10</p>
+        <h1 class="text-xl font-bold leading-tight text-white xs:text-3xl lg:text-5xl xl:text-6xl">
+            PENGEMBANGAN PERANGKAT <br> LUNAK DAN GIM
+        </h1>
+        <p class="text-sm text-white lg:text-lg leading-thight">Kelas 10</p>
     </div>
+
+    <!-- Background Image -->
     <div>
         <img loading="lazy" decoding="async" class="object-cover w-full h-full max-h-screen" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-4.webp" alt="">
     </div>
 
-
+    <!-- Info Box -->
     <div class="container absolute inset-x-0 left-0 z-40 flex items-start justify-center w-full mx-auto center -bottom-16 xs:-bottom-10 sm:bottom-14 gap-7 px-28">
         <div class="flex items-center max-w-sm gap-3 md:items-start">
-            <i class="text-xs text-white fa-solid fa-circle-info md:text-lg md:mt-2"></i>
+
             <div>
                 <h1 class="text-xs font-semibold text-white sm:text-sm md:text-2xl">Pembelajaran</h1>
-                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block"> Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program </p>
+                <p class="hidden mt-3 text-white text-xxs md:text-xs md:block">
+                    Mempelajari Basic Microsoft Office, Basic Editing (Photoshop dan Coreldraw) Bahasa Program C++ dan juga Bahasa Program
+                </p>
             </div>
         </div>
-
     </div>
 
-    <div class="container max-w-xs sm:max-w-lg lg:max-w-3xl xl:max-w-6xl absolute -bottom-20 xs:-bottom-13  sm:bottom-5 bg-white h-[1px] z-40 mx-auto inset-x-0 px-28"></div>
+    <!-- Divider -->
+    <div class="container max-w-xs sm:max-w-lg lg:max-w-3xl xl:max-w-6xl absolute -bottom-20 xs:-bottom-13 sm:bottom-5 bg-white h-[1px] z-40 mx-auto inset-x-0 px-28"></div>
+
+    <!-- Navigation Buttons -->
+    <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-left left-5 top-1/2 hover:bg-gray-100">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+        </svg>
+    </button>
+    <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-right right-5 top-1/2 hover:bg-gray-100">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+        </svg>
+    </button>
 </section>
+
+
 
 
 <section class="pt-20 bg-black h-fll md:pt-0">
@@ -194,11 +253,18 @@
             <h1 class="text-3xl text-white font-bebas lg:text-6xl">Ringkasan</h1>
             <div class="flex flex-col mt-5 lg:flex-row gap-7">
                 <div class="w-full lg:w-7/12">
-                    <p class="text-xs leading-normal text-justify text-white font-inter sm:text-sm lg:text-base">Siak Sri Indrapura, yang dikenal Siak Sri Indrapura adalah salah satu destinasi wisata bersejarah di Provinsi Riau yang kaya akan warisan budaya Melayu. Kota ini terkenal dengan Istana Siak Sri Indrapura, sebuah istana megah yang dulunya menjadi pusat pemerintahan Kesultanan Siak. Dibangun pada tahun 1889, istana ini memadukan arsitektur Melayu, Eropa, dan Arab yang menciptakan keunikan tersendiri. Di dalamnya, pengunjung dapat menemukan berbagai koleksi benda bersejarah, seperti perhiasan kerajaan, alat musik tradisional seperti komet, hingga singgasana megah yang menjadi simbol kekuasaan kesultanan.</p>
-                    <p class="mt-3 text-xs leading-normal text-justify text-white font-inter sm:text-sm lg:text-base">Siak juga menawarkan daya tarik wisata alam dan budaya lainnya. Sungai Siak, yang menjadi urat nadi kehidupan masyarakat setempat, dapat dinikmati melalui wisata perahu sambil menyaksikan pemandangan asri dan aktivitas nelayan. Kota ini juga menjadi tempat penyelenggaraan berbagai acara budaya, seperti festival musik dan tari tradisional Melayu, yang menambah daya tarik bagi wisatawan.</p>
+                    <p class="text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                        Belajar teknologi itu seru banget, apalagi kalau mulai dari yang basic! Di semester pertama, kamu bakal belajar Microsoft Office, kayak bikin dokumen kece di Word, presentasi yang bikin kagum pake PowerPoint, sampai ngulik data sederhana di Excel. Skills ini tuh wajib banget buat kehidupan sekolah, kuliah, atau kerja nanti!
+                    </p>
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                        Nggak cuma itu, kamu juga bakal diajarin editing grafis pakai Photoshop dan CorelDRAW. Di Photoshop, kamu bisa belajar edit foto biar makin aesthetic atau bikin manipulasi gambar yang keren abis. Kalau CorelDRAW, cocok banget buat yang suka bikin desain vektor kayak logo, poster, atau brosur yang bikin mata melirik!
+                    </p>
+                    <p class="mt-3 text-xs leading-normal text-justify text-white sm:text-sm lg:text-base">
+                        Masuk ke dunia coding, semester pertama kamu bakal kenalan sama Bahasa C++ buat belajar logika, algoritma, sampai bikin program sederhana. Terus, semester kedua bakal lebih seru lagi karena kamu belajar Java, bahasa pemrograman yang dipakai buat bikin aplikasi keren. Pokoknya, gabungan materi ini bikin kamu nggak cuma jago teknis, tapi juga kreatif dan siap melangkah ke dunia teknologi masa depan! 🚀
+                    </p>
                 </div>
                 <div class="w-full lg:w-5/12">
-                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl" loading="lazy" decoding="async" src="./public/images/fasilitas-kerja-sama.webp" alt="">
+                    <img class="object-cover h-full rounded-es-3xl rounded-se-3xl" loading="lazy" decoding="async" src="./public/images/kelas-rpl/kelas-rpl-10-ppl-1.webp" alt="">
                 </div>
             </div>
         </div>
