kelas.html > galeri.html . added kelas.html

--- a/kelas10.html
+++ b/kelas10.html
@@ -229,14 +229,18 @@
 
     <!-- Navigation Buttons -->
     <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-left left-5 top-1/2 hover:bg-gray-100">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
-        </svg>
+        <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+            </svg>
+       </a>
     </button>
     <button class="absolute z-50 flex items-center justify-center w-10 h-10 text-black transition transform -translate-y-1/2 bg-white rounded-full shadow-md arrow arrow-right right-5 top-1/2 hover:bg-gray-100">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
-        </svg>
+        <a href="">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+            </svg>
+        </a>
     </button>
 </section>
 
