kelas card reposning

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </li>
                 <li class="py-2 ps-1" data-twe-nav-item-ref>
                   <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform rounded-full hover:text-gray-300 hover:bg-white hover:bg-opacity-20" 
-                  aria-current="page" href="#photo"data-twe-nav-link-ref>Galeri</a>
+                  aria-current="page" href="./galeri.html"data-twe-nav-link-ref>Galeri</a>
               </li>
               </ul>
   
