--- a/kelas.html
+++ b/kelas.html
@@ -264,7 +264,7 @@ margin: 0;
     <h1 class="relative z-20 max-w-5xl pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white matrix-text md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
         KELAS PPLG <br>
     </h1>
-    <div class="flex flex-col justify-center gap-4 lg:flex-row">
+    <div class="flex flex-col justify-center gap-4 item-center lg:flex-row">
       <div class="w-full lg:w-1/3">
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-blue-900/50"
           style="border: 3px solid rgb(126, 118, 118);">
@@ -289,7 +289,7 @@ margin: 0;
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-blue-900/50"
           style="border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
-            src="./public/images/kelas-rpl/kelas-rpl-10-ppl-6.webp" alt="">
+            src="./public/images/kelas-rpl/kelas-rpl-11-ppl-2.webp" alt="">
           <a href="./kelas11.html" loading="lazy" decoding="async" data-fancybox="gallery" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
@@ -309,7 +309,7 @@ margin: 0;
         <div class="relative flex items-end p-6 mb-8 overflow-hidden text-white duration-300 card-kelas rounded-3xl group hover:shadow-2xl hover:scale-105 hover:shadow-red-600/50"
           style="border: 3px solid rgb(126, 118, 118);">
           <img loading="lazy" decoding="async" class="absolute top-0 left-0 object-cover w-full h-full" 
-            src="./public/images/kelas-rpl/kelas-rpl-10-ppl-6.webp" alt="">
+            src="./public/images/kelas-rpl/kelas-rpl-12-3.webp" alt="">
           <a href="./kelas12.html" loading="lazy" decoding="async" data-fancybox="gallery" >
             <div class="relative">
               <div class="flex items-center justify-between mb-20">
