--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   
   <section id="about">
   <section class="relative p-4 py-12 pt-20 pb-20 bg-white/50" style="overflow: hidden !important;" >
-    <h1 class="relative z-20 max-w-5xl pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
+    <h1 class="relative z-20 max-w-5xl py-5 pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
       Apasih PPLG Itu ? <br>
   </h1>
   <p class="relative z-20 max-w-5xl pb-10 mx-auto mb-4 text-xs leading-none tracking-tight text-center text-gray-200 text-md md:text-lg lg:text-lg" data-aos="zoom-out-up" data-aos-delay="200">
@@ -500,7 +500,7 @@
    <div class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-black via-transparent to-transparent h-96 "></div>
 
     <div class="container w-full mx-auto">
-      <h1 class="max-w-5xl pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
+      <h1 class="max-w-5xl py-5 pb-10 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
         Guru PPLG <br>
       </h1>
       <p class="pt-10 pb-10 mb-4 text-sm leading-none tracking-tight text-center text-white md:text-lg " data-aos="zoom-out-down">
@@ -674,7 +674,7 @@
   
       <div class="absolute inset-0 -z-10" style="background-color: rgba(0, 0, 0, 0.753);"></div>
       <div class="container h-full p-4 pt-20 pb-20 mx-auto " style="overflow: hidden !important;">
-        <h1 class="max-w-5xl mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
+        <h1 class="max-w-5xl py-5 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
           Fasilitas <br>
         </h1>
         <div class="flex flex-col items-center text-white " style="overflow: hidden !important;">
@@ -797,54 +797,66 @@
     </div>
   </section>
 
-  <swiper-container class="relative z-40 mySwiper" loop="true" slides-per-view="2"
-  space-between="30" centered-slides="true">
-    <swiper-slide class ="!-mr-2 lg:!mr-[30px]">
-      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
-      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
-    </swiper-slide>
-    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
-      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
-    </swiper-slide>
-    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
-    </swiper-slide>
-    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
-    </swiper-slide>
-    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet</p>
-      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
-    </swiper-slide>
-    <swiper-slide class="!-mr-2 lg:!mr-[30px]">
-      <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
-      <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
-      <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
-      <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
-      <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
-    </swiper-slide>
-  </swiper-container>
-  
+
+
+<section class="bg-black/50" id="website">
+    
   <div class="relative flex flex-col ">
     <div class="absolute top-0 left-0 z-10 w-full bg-gradient-to-b from-black via-transparent to-transparent h-44"></div>
+    <div class="container h-full p-4 pt-20 pb-20 mx-auto " style="overflow: hidden !important;">
+      <h1 class="max-w-5xl py-5 mx-auto mb-4 text-4xl leading-none tracking-tight text-center text-white md:text-5xl xl:text-6xl" data-aos="zoom-out-down">
+        Website <br>
+      </h1>
+      <swiper-container class="relative z-40 mySwiper" loop="true" slides-per-view="2"
+      space-between="30" centered-slides="true">
+        <swiper-slide class ="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 font-bebas ml-7 lg:mt-7 mb-7 sm:text-xl lg:text-4xl lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover object-bottom" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet</p>
+          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+        <swiper-slide class="!-mr-2 lg:!mr-[30px]">
+          <p class="absolute bottom-0 left-0 z-40 text-sm tracking-widest text-left text-white uppercase lg:top-0 lg:text-4xl sm:text-xl font-bebas ml-7 lg:mt-7 mb-7 lg:mb-2">Lorem ipsum dolor sit amet </p>
+          <a href=""><i class="absolute top-0 right-0 z-40 mt-4 text-sm duration-200 hover:text-white/80 hover:scale-110 text-white/50 lg:text-lg mr-7 lg:mt-7 fa-solid fa-arrow-up-right-from-square"></i></a>
+          <div class="absolute bottom-0 z-30 w-full h-28 lg:h-72 bg-gradient-to-b from-transparent to-black"></div>
+          <div class="absolute top-0 z-20 hidden w-full h-12 lg:block md:h-32 bg-gradient-to-t from-transparent to-black/30"></div>
+          <img loading="lazy" decoding="async" class=" h-52 !md:h-[400px] lg:h-[450px] object-cover" src="./public/images/kelas-rpl/kelas-rpl-10-11.webp" alt="Website Kelas RPL" width="100%" height="100%">
+        </swiper-slide>
+      </swiper-container>
+    </div>
+  </div>
+</section>
+  
+  <div class="relative flex flex-col ">
   
         <footer class="w-full p-4 pt-10 pb-10">
             
